[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/Game.gd" type="Script" id=1]
[ext_resource path="res://game/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/player/Player.gd" type="Script" id=3]
[ext_resource path="res://game/player/AI.gd" type="Script" id=4]
[ext_resource path="res://game/ball/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://audio/pongv0.1.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 256, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 152 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 148.0, 32.0 ],
"_edit_vertical_guides_": [ 256.0, 16.0, 496.0 ]
}

[node name="Control" type="Control" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 496.0
margin_bottom = 56.0

[node name="LblScores" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -7.0
margin_right = 69.0
margin_bottom = 7.0
text = "Player 1: 0 Player 2: 0"

[node name="WallTop" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 256, -8 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 0, 316 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 256, -8 )
shape = SubResource( 1 )

[node name="GoalLeft" type="Area2D" parent="."]
position = Vector2( -8, 152 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft"]
shape = SubResource( 2 )

[node name="GoalRight" type="Area2D" parent="."]
position = Vector2( 520, 152 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight"]
shape = SubResource( 2 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 32 )
script = ExtResource( 3 )
up = "p1_up"
down = "p1_down"
clockwise = "p1_clockwise"
anticlockwise = "p1_anticlockwise"
speed = 200

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 496, 32 )
script = ExtResource( 3 )
up = "p2_up"
down = "p2_down"
clockwise = "p2_clockwise"
anticlockwise = "p2_anticlockwise"
speed = 200

[node name="PlayerAI" parent="." instance=ExtResource( 2 )]
position = Vector2( 496, 148 )
script = ExtResource( 4 )

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 256, 148 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true
attenuation = 1.0

[connection signal="area_entered" from="GoalLeft" to="." method="_on_GoalLeft_area_entered"]
[connection signal="area_exited" from="GoalRight" to="." method="_on_GoalRight_area_exited"]
